# AgentPulse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SCOPE.md
app/: Package.swift  make-app.sh
app/Sources/AgentPulseApp/: AddJobForm.swift  AgentPulseApp.swift  DashboardView.swift  MenuContentView.swift  Models.swift  Notifier.swift  SocketClient.swift  StatusStore.swift
cli/: CMakeLists.txt
cli/src/: main.cpp
daemon/: CMakeLists.txt
daemon/src/: db.cpp  db.hpp  log.cpp  log.hpp  main.cpp  paths.cpp  paths.hpp  shared_state.hpp
daemon/src/alerts/: alert_engine.cpp  alert_engine.hpp  notifier.cpp  notifier.hpp
daemon/src/config/: config.cpp  config.hpp
daemon/src/ipc/: api.cpp  api.hpp  socket_server.cpp  socket_server.hpp
daemon/src/jobs/: process_runner.cpp  process_runner.hpp  scheduler.cpp  scheduler.hpp
daemon/src/metrics/: cpu_sampler.cpp  cpu_sampler.hpp  disk_sampler.cpp  disk_sampler.hpp  memory_sampler.cpp  memory_sampler.hpp  process_sampler.cpp  process_sampler.hpp  self_sampler.cpp  self_sampler.hpp  thermal_sampler.hpp  thermal_sampler.mm
daemon/src/power/: sleep_monitor.cpp  sleep_monitor.hpp
daemon/src/schedule/: cron.cpp  cron.hpp
docs/: PROTOCOL.md
examples/: config.yaml
packaging/: com.aamorifreeman.agentpulse.plist.in  install.sh  uninstall.sh
tests/: CMakeLists.txt  test_main.cpp
